refactor: final changes to fileStorage
