# FileStorage/API/controllers/get_file_controller.go
@@ -18,10 +18,6 @@ func NewGetFileController(qrs *queries.GetFileQueryHandler) *GetFileController {
 	return &GetFileController{queryHandler: qrs}
 }
 
-// The commented section starting with `// Handle godoc` is a documentation comment written in a
-// specific format that is compatible with tools like Swagger and other API documentation generators.
-// This comment provides detailed information about the `Handle` method of the `GetFileController`
-// struct.
 // Handle godoc
 // @Summary Get a file
 // @Description Retrieves a file from storage by its unique identifier. The ID should refer to a valid, stored file, and the file is returned in its original format (e.g., JPEG, PNG).
@@ -32,10 +28,10 @@ func NewGetFileController(qrs *queries.GetFileQueryHandler) *GetFileController {
 // @Param owner_id query string true "Owner ID associated with the file"
 // @Param download query string false "File binary content or file to download"
 // @Success 200 {file} binary "Successful retrieval of file in binary format or file to download in attachment"
-// @Failure 400 {object} contract.GetFileResponse "Request contains invalid format or parameters"
-// @Failure 404 {object} contract.GetFileResponse "File not found with the given ID"
-// @Failure 500 {object} contract.GetFileResponse "Server encountered an error during file retrieval"
-// @Router /files/get [get]
+// @Failure 400 {object} contract.GetFileResponse400 "Request contains invalid format or parameters"
+// @Failure 404 {object} contract.GetFileResponse404 "File not found with the given ID"
+// @Failure 500 {object} contract.GetFileResponse500 "Server encountered an error during file retrieval"
+// @Router /file-storage/api/files/get [get]
 func (h *GetFileController) Handle(c *gin.Context) {
 	responseSender := services.NewResponseSender(c)
 
@@ -43,26 +39,15 @@ func (h *GetFileController) Handle(c *gin.Context) {
 	ownerID := c.Query("owner_id")
 	download := c.Query("download")
 
-	if fileID == "" || ownerID == "" {
-		responseSender.Send(contract.GetFileResponse{
-			Title:   "StatusBadRequest",
-			Message: "Missing required query parameters: file_id or owner_id",
-		})
-		return
-	}
-
 	req := contract.GetFileRequest{
 		FileID:  fileID,
 		OwnerID: ownerID,
 	}
 
 	query := mappers.MapToGetFileQuery(&req)
-	_, fileStream, fileExt, err := h.queryHandler.Execute(query)
+	errorResponse, fileStream, fileExt, err := h.queryHandler.Execute(query)
 	if err != nil {
-		responseSender.Send(contract.GetFileResponse{
-			Title:   "StatusInternalServerError",
-			Message: fmt.Sprintf("Something went wrong: %v", err),
-		})
+		responseSender.Send(errorResponse)
 		return
 	}
 
