# FileStorage/Application/commands/save_file/save_file_command_handler.go
@@ -3,10 +3,12 @@ package commands
 
 import (
 	contract "file-storage/Application.contract/SaveFile"
+	"file-storage/Domain/constants"
 	"file-storage/Domain/event"
 	"file-storage/Domain/models"
 	"fmt"
 	"io"
+	"path/filepath"
 
 	"github.com/google/uuid"
 )
@@ -21,14 +23,30 @@ func NewSaveFileCommandHandler(eventPublisher event.EventPublisher) *SaveFileCom
 	}
 }
 
-func (cmd *SaveFileCommandHandler) Execute(command SaveFileCommand) (*contract.SaveFileResponse, error) {
+func (cmd *SaveFileCommandHandler) Execute(command SaveFileCommand) *contract.SaveFileResponse {
+	fileExtension := filepath.Ext(command.File.Filename)
+	if fileExtension == "" {
+		return &contract.SaveFileResponse{
+			Title:   "StatusBadRequest",
+			Message: "File must have a valid extension",
+		}
+	}
+
+	if !constants.IsAllowedExtension(fileExtension) {
+		return &contract.SaveFileResponse{
+			Title:   "StatusBadRequest",
+			Message: fmt.Sprintf("File extension '%s' is not allowed", fileExtension),
+		}
+	}
+
 	u, err := uuid.NewUUID()
 	if err != nil {
 		return &contract.SaveFileResponse{
 			Title:   "StatusInternalServerError",
 			Message: "Error generating GUID",
-		}, err
+		}
 	}
+
 	fileId := u.String()
 
 	fileContent, err := command.File.Open()
@@ -36,7 +54,7 @@ func (cmd *SaveFileCommandHandler) Execute(command SaveFileCommand) (*contract.S
 		return &contract.SaveFileResponse{
 			Title:   "StatusInternalServerError",
 			Message: fmt.Sprintf("Failed to open file: %v", err),
-		}, err
+		}
 	}
 	defer fileContent.Close()
 
@@ -45,7 +63,7 @@ func (cmd *SaveFileCommandHandler) Execute(command SaveFileCommand) (*contract.S
 		return &contract.SaveFileResponse{
 			Title:   "StatusInternalServerError",
 			Message: fmt.Sprintf("Failed to read file content: %v", err),
-		}, err
+		}
 	}
 
 	fileData := models.File{
@@ -55,16 +73,16 @@ func (cmd *SaveFileCommandHandler) Execute(command SaveFileCommand) (*contract.S
 		Content:  content,
 	}
 
-	if err := cmd.eventPublisher.PublishEvent("events.upload", fileData, models.EventTypeUpload); err != nil {
+	if err := cmd.eventPublisher.PublishEvent("file-events.upload", fileData, models.EventTypeUpload); err != nil {
 		return &contract.SaveFileResponse{
 			Title:   "StatusInternalServerError",
 			Message: fmt.Sprintf("Failed to save file: %v", err),
-		}, err
+		}
 	}
 
 	return &contract.SaveFileResponse{
 		Title:   "StatusOK",
 		Message: "File saved successfully",
 		Id:      fileId,
-	}, nil
+	}
 }
